refactor(controller): 메뉴 정하는 순서 변경